--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
----
 name: Deploy Modular Site to Firebase Hosting
 on:
   push:
@@ -11,15 +10,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_GALWAY_JAM_CIRCLE_LIVE }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GALWAY_JAM_CIRCLE_LIVE }}'
           projectId: galway-jam-circle-live
           target: gjc-live
+          channelId: live
       - name: Output Deployment URL
-        run: >
-          echo "### 🚀 Modular Site Deployment Successful! 🚀" >>
-          $GITHUB_STEP_SUMMARY
-
+        run: |
+          echo "### 🚀 Modular Site Deployment Successful! 🚀" >> $GITHUB_STEP_SUMMARY
           echo "**Live Site URL:** https://gjc-live.web.app" >> $GITHUB_STEP_SUMMARY
-
           echo "It may take a minute for changes to be visible." >> $GITHUB_STEP_SUMMARY
