--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,7 @@
     "galway-jam-circle-live": {
       "hosting": {
         "gjc-live": [
-          "galway-jam-circle-live"
+          "galwayjam"
         ]
       }
     }
