--- a/.firebaserc
+++ b/.firebaserc
@@ -1,14 +1,19 @@
 {
-  "projects": {
-    "default": "galway-jam-circle-live"
-  },
-  "targets": {
-    "galway-jam-circle-live": {
-      "hosting": {
-        "gjc-live": [
-          "galwayjam"
-        ]
-      }
+  "hosting": [
+    {
+      "site": "galwayjam",
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
-  }
+  ]
 }
