--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,20 @@
 {
   "hosting": {
+    "target": "galwayjam",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "hosting": {
     "target": "gjc-live",
     "public": "public",
     "ignore": [
@@ -7,5 +22,17 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "targets": {
+    "hosting": {
+      "galwayjam": {
+        "projectId": "galway-jam-circle-live",
+        "site": "galwayjam"
+      },
+      "gjc-live": {
+        "projectId": "galway-jam-circle-live",
+        "site": "galway-jam-circle-live"
+      }
+    }
   }
 }
