--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "eslint-config-prettier": "^10.1.8",
+    "firebase-functions-test": "^3.1.0",
+    "prettier": "^3.6.2"
   },
   "private": true
 }
