--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,9 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "lint:fix": "eslint . --fix",
+    "predeploy": "npm run lint:fix && npm run lint"
   },
   "engines": {
     "node": "18"
