--- a/firebase.json
+++ b/firebase.json
@@ -28,7 +28,7 @@
         "*.local"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run predeploy"
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
       ]
     }
   ]
