feat(admin): Improve admin mode state and UX
Implements persistent admin state using sessionStorage to fix authorization issues after page reloads.

Adds a 'Verifying...' loading modal during PIN check to provide better user feedback, fulfilling a requirement from the spec.

Refactors UI toggling to rely on the '.admin-mode' body class, removing redundant JavaScript and improving maintainability.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,16 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Deploy to Firebase Hosting
-        uses: w9jds/firebase-action@master
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          args: deploy --only hosting:gjc-live
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GALWAY_JAM_CIRCLE_LIVE }}'
+          projectId: galway-jam-circle-live
+          target: gjc-live
