--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,29 @@ on:
   push:
     branches:
       - main
+
+
 jobs:
   build_and_deploy:
+
     runs-on: ubuntu-latest
+
     permissions:
+
       contents: read
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'  # Or the version your project needs
+
       pull-requests: write
+
     steps:
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'  # Or the version your project needs
+
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Deploy to Firebase Hosting
