--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,8 @@
       "ignore": [
         "firebase.json",
         "**/.*",
-        "**/node_modules/**"
+        "**/node_modules/**",
+        "storage.rules"
       ],
       "rewrites": [
         {
@@ -31,5 +32,8 @@
         "npm --prefix \"$RESOURCE_DIR\" run predeploy"
       ]
     }
-  ]
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  }
 }
