--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build CSS
+        run: npm run build:css
+
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
