--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,9 @@
       ]
     }
   ],
+  "firestore": {
+    "rules": "firestore.rules"
+  },
   "functions": [
     {
       "source": "functions",
