--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
           npm install
           npm run build:css
 
+      - name: Install Functions Dependencies
+        run: |
+          cd functions
+          npm install
+
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -34,3 +39,10 @@ jobs:
           projectId: galway-jam-circle-live
           target: gjc-live
           channelId: live
+          
+      - name: Deploy Firebase Functions
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_GALWAY_JAM_CIRCLE_LIVE }}
